# i75W-matrix

./: CMakeLists.txt  README.md  SOURCE_CODE_ANALYSIS.md  altcp_tls_mbedtls_patched.c  font_to_bitmap.py  lwip_mbedtls_compat.h  lwipopts.h  mbedtls_config.h  mbedtls_config.h.disabled  mbedtls_config_old.h  oid_patched.c  package-lock.json  picohttps.c  picohttps.h
.github/workflows/: cmake.yml
ci/: cpp.sh
docs/: API_INTEGRATION_COMPLETE.md  BUILD_SYSTEM_GUIDE.md  CLAUDE_MEMORY.md  DEVELOPMENT_NOTES.md  FONT_EDITOR.txt  GPIO_WIFI_INTEGRATION.md  HARDWARE_CONFIG.md  HTTPS_IMPLEMENTATION.md  TLS_TROUBLESHOOTING_GUIDE.md  WEATHER_API_TODO.md  WIFI_INTEGRATION_GUIDE.md
src/: main.cpp
src/apps/: CryptoApp.cpp  CryptoApp.hpp  StockApp.cpp  StockApp.hpp  WeatherApp.cpp  WeatherApp.hpp
src/assets/weather/: weather_01d_png.h  weather_01d_png_new.h  weather_01n_png_new.h  weather_02d_png.h  weather_02d_png_new.h  weather_02n_png_new.h  weather_03d_png.h  weather_03d_png_new.h  weather_03n_png_new.h  weather_04d_png.h  weather_04d_png_new.h  weather_04n_png_new.h  weather_09d_png.h  weather_09d_png_new.h  weather_09n_png_new.h  weather_10d_png.h  weather_10d_png_new.h  weather_10n_png_new.h  weather_11d_png.h  weather_11d_png_new.h  weather_11n_png_new.h  weather_13d_png.h  weather_13d_png_new.h  weather_13n_png_new.h  weather_50d_png.h  weather_50d_png_new.h  weather_50n_png_new.h
src/core/: BaseApp.hpp  common.cpp  common.hpp  main.cpp  main_old.cpp  roboto_font.h  tiny_converted_font.h  tiny_font_data.h
src/services/: HTTPSService.cpp  HTTPSService.hpp  https_c_wrapper.c  https_c_wrapper.h
src/utils/: encoder.cpp  encoder.hpp  http_client.cpp  http_client.h  https_client.cpp  https_client.h  json_parser.cpp  json_parser.h  network_manager.cpp  network_manager.h  text_renderer.cpp  text_renderer.h  tiny_bitmap.h  weather_icons.py
tools/: font_converter.py  font_parser.py
